--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   <app-root></app-root>
-  <div id="rasa-chat-widget" data-websocket-url="http://172.18.255.255:5005"></div>
+  <div id="rasa-chat-widget" data-websocket-url="https://42d7-2402-9d80-3e3-1fff-8dbc-5e60-ca4d-8a3c.ap.ngrok.io"></div>
   <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
 </body>
 </html>
